--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.1",
     "lint": "^0.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-twitter-embed": "^4.0.4",
-    "sweetalert2": "^11.7.11"
+    "sweetalert2": "^11.7.11",
+    "viem": "^0.3.50",
+    "wagmi": "^1.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
